fix(portfolio): :sparkles: fix overflow in wrapper class

--- a/src/styles/common/style.scss
+++ b/src/styles/common/style.scss
@@ -4,7 +4,6 @@ body {
 
 .wrapper {
   padding: 1rem 2rem;
-  overflow-y: hidden;
   width: 100%;
   transition: all .5s;
 
